# plant-business

./: README.md  Rocket.toml  makefile
.github/workflows/: charts-frontend.yml  deploy-to-server.yml  monitoring-backend.yml  rust.yml
charts-frontend/: package-lock.json  package.json  rollup.config.js
charts-frontend/public/: index.html
charts-frontend/src/: App.svelte  Chart.svelte  GetDataButton.svelte  NavBar.svelte  RefreshButton.svelte  constants.ts  global.d.ts  main.ts  refreshData.ts  stores.ts
esp32-http-client/: .gitignore  NetworkingConfig.h  esp32-http-client.ino
monitoring-backend/: .env  Cargo.toml  Rocket.toml
monitoring-backend/migrations/2021-05-01-172336_create_plant_metrics/: down.sql  up.sql
monitoring-backend/src/: data.rs  main.rs  metric.rs  models.rs  schema.rs
