[package]
name = "monitoring-backend"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4.19"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "801e04bd5369eb39e126c75f6d11e1e9597304d8" }
diesel = { version = "1.4.6", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
rev = "801e04bd5369eb39e126c75f6d11e1e9597304d8"
default-features = false
features = ["diesel_postgres_pool", "json"]
